--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Do List</title>
-  <link rel="stylesheet" href="./css/styles.css">
-</head>
-
-<body>
+  <%- include("header") -%>
   <div class="box" id="heading">
-    <h1 style="color: purple;"><%= day %></h1>
+    <h1 style="color: purple;"><%= listTitle %></h1>
   </div>
 
   <div class="box">
@@ -25,11 +14,8 @@
     </ul>
     <form class="item" action="/" method="post">
       <input type="text" placeholder="New Item" name="listItem" autocomplete="off">
-      <button type="submit">+</button>
+      <button type="submit" name="list" value=<%= listTitle %>>+</button>
     </form>
   </div>
 
-
-</body>
-
-</html>
+  <%- include("footer") -%>
